frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sweet-frontend-service
spec:
  selector:
    app: sweet-frontend
  ports:
    - port: 5173
      targetPort: 5173
