frontend/k8s/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sweet-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: www.sweethunt.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: sweet-frontend-service
                port:
                  number: 5173
